# Rust-Microsoft-Learn

./: Cargo.toml  README.md  test-journal.json
src/: auth.rs  car.rs  cli.rs  file.rs  lib.rs  main.rs  person.rs  structs.rs  tasks.rs
tests/: pizzas.rs
